// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 1`] = `
Array [
  "cjs/server.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';

const https = require('https');

const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};

const https__default = /*#__PURE__*/_interopDefault(https);

https__default.default.createServer((req, res) => {
  res.writeHead(200, {
    'Content-Type': 'text/plain'
  });
  res.write('Hello World!');
  res.end();
}).listen(8080);
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 2`] = `
Array [
  "esm/client.js",
  "function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== \\"undefined\\" && o[Symbol.iterator] || o[\\"@@iterator\\"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === \\"number\\") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError(\\"Invalid attempt to iterate non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.\\"); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }

function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === \\"string\\") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === \\"Object\\" && o.constructor) n = o.constructor.name; if (n === \\"Map\\" || n === \\"Set\\") return Array.from(o); if (n === \\"Arguments\\" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }

function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) { arr2[i] = arr[i]; } return arr2; }

function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if (\\"value\\" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, \\"prototype\\", { writable: false }); return Constructor; }

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var Client = /*#__PURE__*/_createClass(function Client() {
  _classCallCheck(this, Client);

  _defineProperty(this, \\"prop\\", 123);
});

function* gen() {}

async function wait() {}

async function createClient() {
  await wait();

  var _iterator = _createForOfIteratorHelper(gen()),
      _step;

  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }

  return new Client();
}

export { createClient };
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 3`] = `
Array [
  "lib/client.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';

function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== \\"undefined\\" && o[Symbol.iterator] || o[\\"@@iterator\\"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === \\"number\\") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError(\\"Invalid attempt to iterate non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.\\"); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }

function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === \\"string\\") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === \\"Object\\" && o.constructor) n = o.constructor.name; if (n === \\"Map\\" || n === \\"Set\\") return Array.from(o); if (n === \\"Arguments\\" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }

function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) { arr2[i] = arr[i]; } return arr2; }

function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if (\\"value\\" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, \\"prototype\\", { writable: false }); return Constructor; }

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

Object.defineProperty(exports, '__esModule', {
  value: true
});

var Client = /*#__PURE__*/_createClass(function Client() {
  _classCallCheck(this, Client);

  _defineProperty(this, \\"prop\\", 123);
});

function* gen() {}

async function wait() {}

async function createClient() {
  await wait();

  var _iterator = _createForOfIteratorHelper(gen()),
      _step;

  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }

  return new Client();
}

exports.createClient = createClient;
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 4`] = `
Array [
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const EXAMPLE = 'foo';
exports.EXAMPLE = EXAMPLE;
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 5`] = `
Array [
  "lib/test.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

class Spy {
  called = false;
  mock = () => {};

  method() {}

}

function spy() {
  const inst = new Spy();
  return jest.fn(inst.mock);
}

async function wait() {}

exports.spy = spy;
exports.wait = wait;
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 6`] = `
Array [
  "package.json",
  Object {
    "dependencies": Object {
      "typescript": "*",
    },
    "main": "./lib/index.js",
    "name": "project-rollup",
    "packemon": Object {
      "inputs": Object {
        "client": "src/client.ts",
        "index": "src/index.ts",
        "server": "src/server/core.ts",
        "test": "src/test-utils/base.ts",
      },
    },
  },
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 7`] = `
Array [
  "umd/client.js",
  "(function (global, factory) {
  if (typeof define === \\"function\\" && define.amd) {
    define(\\"Packemon\\", [\\"exports\\"], factory);
  } else if (typeof exports !== \\"undefined\\") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.Packemon = mod.exports;
  }
})(typeof globalThis !== \\"undefined\\" ? globalThis : typeof self !== \\"undefined\\" ? self : this, function (_exports) {
  \\"use strict\\";

  Object.defineProperty(_exports, \\"__esModule\\", {
    value: true
  });
  _exports.createClient = createClient;

  function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== \\"undefined\\" && o[Symbol.iterator] || o[\\"@@iterator\\"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === \\"number\\") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError(\\"Invalid attempt to iterate non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.\\"); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }

  function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === \\"string\\") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === \\"Object\\" && o.constructor) n = o.constructor.name; if (n === \\"Map\\" || n === \\"Set\\") return Array.from(o); if (n === \\"Arguments\\" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }

  function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) { arr2[i] = arr[i]; } return arr2; }

  function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if (\\"value\\" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

  function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, \\"prototype\\", { writable: false }); return Constructor; }

  function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

  function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd
  var Client = /*#__PURE__*/_createClass(function Client() {
    _classCallCheck(this, Client);

    _defineProperty(this, \\"prop\\", 123);
  });

  function* gen() {}

  async function wait() {}

  async function createClient() {
    await wait();

    var _iterator = _createForOfIteratorHelper(gen()),
        _step;

    try {
      for (_iterator.s(); !(_step = _iterator.n()).done;) {
        var iterator = _step.value;
        console.log(iterator);
      }
    } catch (err) {
      _iterator.e(err);
    } finally {
      _iterator.f();
    }

    return new Client();
  }
});
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 8`] = `
Array [
  Object {
    "format": "lib",
    "stats": Object {
      "size": 225,
    },
  },
]
`;

exports[`Outputs (babel) bundle bundles all files into a single file with rollup 1`] = `
Array [
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

exports.bar = bar;
exports.foo = foo;
",
]
`;

exports[`Outputs (babel) bundle bundles all files into a single file with rollup 2`] = `
Array [
  "package.json",
  Object {
    "main": "./lib/index.js",
    "name": "project-bundle",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets 1`] = `
Array [
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('../assets/globals-107ab52e.css');

require('../assets/fonts-4e5dc96c.css');

require('../assets/styles-b11c3a83.css');

function button() {}

exports.button = button;
",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets 2`] = `
Array [
  "package.json",
  Object {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets 3`] = `
Array [
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets 4`] = `
Array [
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets 5`] = `
Array [
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 1`] = `
Array [
  "cjs/index.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('../assets/globals-107ab52e.css');

require('../assets/fonts-4e5dc96c.css');

require('../assets/styles-b11c3a83.css');

function button() {}

exports.button = button;
",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 2`] = `
Array [
  "esm/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: esm
import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
import '../assets/styles-b11c3a83.css';

function button() {}

export { button };
",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 3`] = `
Array [
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('../assets/globals-107ab52e.css');

require('../assets/fonts-4e5dc96c.css');

require('../assets/styles-b11c3a83.css');

function button() {}

exports.button = button;
",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 4`] = `
Array [
  "package.json",
  Object {
    "main": "./lib/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 5`] = `
Array [
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 6`] = `
Array [
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 7`] = `
Array [
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 8`] = `
Array [
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 9`] = `
Array [
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 10`] = `
Array [
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 11`] = `
Array [
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 12`] = `
Array [
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 13`] = `
Array [
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) no bundle creates individual files for every source file 1`] = `
Array [
  "lib/index.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

const index = require('./index2.js');

const other = require('./other2.js');

exports.bar = index.bar;
exports.foo = other.foo;
",
]
`;

exports[`Outputs (babel) no bundle creates individual files for every source file 2`] = `
Array [
  "lib/index2.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

const other = require('./other2.js');

function bar() {}

exports.foo = other.foo;
exports.bar = bar;
",
]
`;

exports[`Outputs (babel) no bundle creates individual files for every source file 3`] = `
Array [
  "lib/not-imported.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

const notImported = require('./not-imported2.js');

exports.baz = notImported.baz;
",
]
`;

exports[`Outputs (babel) no bundle creates individual files for every source file 4`] = `
Array [
  "lib/not-imported2.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function baz() {}

exports.baz = baz;
",
]
`;

exports[`Outputs (babel) no bundle creates individual files for every source file 5`] = `
Array [
  "lib/other.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

const other = require('./other2.js');

exports.foo = other.foo;
",
]
`;

exports[`Outputs (babel) no bundle creates individual files for every source file 6`] = `
Array [
  "lib/other2.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

exports.foo = foo;
",
]
`;

exports[`Outputs (babel) no bundle creates individual files for every source file 7`] = `
Array [
  "package.json",
  Object {
    "main": "./lib/index.js",
    "name": "project-bundle",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets 1`] = `
Array [
  "lib/button/index.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

const index = require('./index2.js');

exports.button = index.button;
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets 2`] = `
Array [
  "lib/button/index2.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('../../assets/styles-b11c3a83.css');

function button() {}

exports.button = button;
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets 3`] = `
Array [
  "lib/index.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('./index2.js');

const index = require('./button/index2.js');

exports.button = index.button;
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets 4`] = `
Array [
  "lib/index2.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('../assets/globals-107ab52e.css');

require('../assets/fonts-4e5dc96c.css');

const index = require('./button/index2.js');

exports.button = index.button;
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets 5`] = `
Array [
  "package.json",
  Object {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets 6`] = `
Array [
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets 7`] = `
Array [
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets 8`] = `
Array [
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 1`] = `
Array [
  "cjs/server.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';

const https = require('https');

const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};

const https__default = /*#__PURE__*/_interopDefault(https);

https__default.default.createServer((req, res) => {
  res.writeHead(200, {
    'Content-Type': 'text/plain'
  });
  res.write('Hello World!');
  res.end();
}).listen(8080);
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 2`] = `
Array [
  "esm/client.js",
  "function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== \\"undefined\\" && o[Symbol.iterator] || o[\\"@@iterator\\"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === \\"number\\") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError(\\"Invalid attempt to iterate non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.\\"); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }

function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === \\"string\\") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === \\"Object\\" && o.constructor) n = o.constructor.name; if (n === \\"Map\\" || n === \\"Set\\") return Array.from(o); if (n === \\"Arguments\\" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }

function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) { arr2[i] = arr[i]; } return arr2; }

function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if (\\"value\\" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, \\"prototype\\", { writable: false }); return Constructor; }

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var Client = /*#__PURE__*/_createClass(function Client() {
  _classCallCheck(this, Client);

  _defineProperty(this, \\"prop\\", 123);
});

function* gen() {}

async function wait() {}

async function createClient() {
  await wait();

  var _iterator = _createForOfIteratorHelper(gen()),
      _step;

  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }

  return new Client();
}

export { createClient };
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 3`] = `
Array [
  "lib/client.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';

function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== \\"undefined\\" && o[Symbol.iterator] || o[\\"@@iterator\\"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === \\"number\\") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError(\\"Invalid attempt to iterate non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.\\"); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }

function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === \\"string\\") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === \\"Object\\" && o.constructor) n = o.constructor.name; if (n === \\"Map\\" || n === \\"Set\\") return Array.from(o); if (n === \\"Arguments\\" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }

function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) { arr2[i] = arr[i]; } return arr2; }

function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if (\\"value\\" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, \\"prototype\\", { writable: false }); return Constructor; }

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

Object.defineProperty(exports, '__esModule', {
  value: true
});

var Client = /*#__PURE__*/_createClass(function Client() {
  _classCallCheck(this, Client);

  _defineProperty(this, \\"prop\\", 123);
});

function* gen() {}

async function wait() {}

async function createClient() {
  await wait();

  var _iterator = _createForOfIteratorHelper(gen()),
      _step;

  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }

  return new Client();
}

exports.createClient = createClient;
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 4`] = `
Array [
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});
const EXAMPLE = 'foo';
exports.EXAMPLE = EXAMPLE;
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 5`] = `
Array [
  "lib/test.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

class Spy {
  called = false;
  mock = () => {};

  method() {}

}

function spy() {
  const inst = new Spy();
  return jest.fn(inst.mock);
}

async function wait() {}

exports.spy = spy;
exports.wait = wait;
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 6`] = `
Array [
  "package.json",
  Object {
    "dependencies": Object {
      "typescript": "*",
    },
    "main": "./lib/index.js",
    "name": "project-rollup",
    "packemon": Object {
      "inputs": Object {
        "client": "src/client.ts",
        "index": "src/index.ts",
        "server": "src/server/core.ts",
        "test": "src/test-utils/base.ts",
      },
    },
  },
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 7`] = `
Array [
  "umd/client.js",
  "(function (global, factory) {
  if (typeof define === \\"function\\" && define.amd) {
    define(\\"Packemon\\", [\\"exports\\"], factory);
  } else if (typeof exports !== \\"undefined\\") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.Packemon = mod.exports;
  }
})(typeof globalThis !== \\"undefined\\" ? globalThis : typeof self !== \\"undefined\\" ? self : this, function (_exports) {
  \\"use strict\\";

  Object.defineProperty(_exports, \\"__esModule\\", {
    value: true
  });
  _exports.createClient = createClient;

  function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== \\"undefined\\" && o[Symbol.iterator] || o[\\"@@iterator\\"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === \\"number\\") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError(\\"Invalid attempt to iterate non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.\\"); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }

  function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === \\"string\\") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === \\"Object\\" && o.constructor) n = o.constructor.name; if (n === \\"Map\\" || n === \\"Set\\") return Array.from(o); if (n === \\"Arguments\\" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }

  function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) { arr2[i] = arr[i]; } return arr2; }

  function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if (\\"value\\" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

  function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, \\"prototype\\", { writable: false }); return Constructor; }

  function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

  function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd
  var Client = /*#__PURE__*/_createClass(function Client() {
    _classCallCheck(this, Client);

    _defineProperty(this, \\"prop\\", 123);
  });

  function* gen() {}

  async function wait() {}

  async function createClient() {
    await wait();

    var _iterator = _createForOfIteratorHelper(gen()),
        _step;

    try {
      for (_iterator.s(); !(_step = _iterator.n()).done;) {
        var iterator = _step.value;
        console.log(iterator);
      }
    } catch (err) {
      _iterator.e(err);
    } finally {
      _iterator.f();
    }

    return new Client();
  }
});
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 8`] = `
Array [
  Object {
    "format": "lib",
    "stats": Object {
      "size": 225,
    },
  },
]
`;

exports[`Outputs (swc) bundle bundles all files into a single file with rollup 1`] = `
Array [
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

function bar() {}

exports.bar = bar;
exports.foo = foo;
",
]
`;

exports[`Outputs (swc) bundle bundles all files into a single file with rollup 2`] = `
Array [
  "package.json",
  Object {
    "main": "./lib/index.js",
    "name": "project-bundle",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets 1`] = `
Array [
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('../assets/globals-107ab52e.css');

require('../assets/fonts-4e5dc96c.css');

require('../assets/styles-b11c3a83.css');

function button() {}

exports.button = button;
",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets 2`] = `
Array [
  "package.json",
  Object {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets 3`] = `
Array [
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets 4`] = `
Array [
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets 5`] = `
Array [
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 1`] = `
Array [
  "cjs/index.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('../assets/globals-107ab52e.css');

require('../assets/fonts-4e5dc96c.css');

require('../assets/styles-b11c3a83.css');

function button() {}

exports.button = button;
",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 2`] = `
Array [
  "esm/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: esm
import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
import '../assets/styles-b11c3a83.css';

function button() {}

export { button };
",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 3`] = `
Array [
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('../assets/globals-107ab52e.css');

require('../assets/fonts-4e5dc96c.css');

require('../assets/styles-b11c3a83.css');

function button() {}

exports.button = button;
",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 4`] = `
Array [
  "package.json",
  Object {
    "main": "./lib/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 5`] = `
Array [
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 6`] = `
Array [
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 7`] = `
Array [
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 8`] = `
Array [
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 9`] = `
Array [
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 10`] = `
Array [
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 11`] = `
Array [
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 12`] = `
Array [
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 13`] = `
Array [
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) no bundle creates individual files for every source file 1`] = `
Array [
  "lib/index.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

const index = require('./index2.js');

const other = require('./other2.js');

exports.bar = index.bar;
exports.foo = other.foo;
",
]
`;

exports[`Outputs (swc) no bundle creates individual files for every source file 2`] = `
Array [
  "lib/index2.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

const other = require('./other2.js');

function bar() {}

exports.foo = other.foo;
exports.bar = bar;
",
]
`;

exports[`Outputs (swc) no bundle creates individual files for every source file 3`] = `
Array [
  "lib/not-imported.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

const notImported = require('./not-imported2.js');

exports.baz = notImported.baz;
",
]
`;

exports[`Outputs (swc) no bundle creates individual files for every source file 4`] = `
Array [
  "lib/not-imported2.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function baz() {}

exports.baz = baz;
",
]
`;

exports[`Outputs (swc) no bundle creates individual files for every source file 5`] = `
Array [
  "lib/other.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

const other = require('./other2.js');

exports.foo = other.foo;
",
]
`;

exports[`Outputs (swc) no bundle creates individual files for every source file 6`] = `
Array [
  "lib/other2.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

function foo() {}

exports.foo = foo;
",
]
`;

exports[`Outputs (swc) no bundle creates individual files for every source file 7`] = `
Array [
  "package.json",
  Object {
    "main": "./lib/index.js",
    "name": "project-bundle",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets 1`] = `
Array [
  "lib/button/index.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

const index = require('./index2.js');

exports.button = index.button;
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets 2`] = `
Array [
  "lib/button/index2.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('../../assets/styles-b11c3a83.css');

function button() {}

exports.button = button;
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets 3`] = `
Array [
  "lib/index.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('./index2.js');

const index = require('./button/index2.js');

exports.button = index.button;
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets 4`] = `
Array [
  "lib/index2.js",
  "'use strict';

Object.defineProperty(exports, '__esModule', {
  value: true
});

require('../assets/globals-107ab52e.css');

require('../assets/fonts-4e5dc96c.css');

const index = require('./button/index2.js');

exports.button = index.button;
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets 5`] = `
Array [
  "package.json",
  Object {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": Object {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets 6`] = `
Array [
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets 7`] = `
Array [
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets 8`] = `
Array [
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Special formats cts supports .cts -> .cjs / .d.cts 1`] = `
Array [
  "cjs/index.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';

function test() {
  return 123;
}

module.exports = test;
",
]
`;

exports[`Special formats cts supports .cts -> .cjs / .d.cts 2`] = `
Array [
  "package.json",
  Object {
    "main": "./cjs/index.cjs",
    "name": "project-cts",
    "packemon": Object {
      "format": "cjs",
      "inputs": Object {
        "index": "src/index.cts",
      },
    },
    "type": "commonjs",
    "types": "./dts/index.d.cts",
  },
]
`;
